cmake_minimum_required(VERSION 3.22)
# Enable CMake support for ASM and C languages
enable_language(C ASM)
# STM32CubeMX generated symbols (macros)
set(MX_Defines_Syms 
	STM32F103xB
    $<$<CONFIG:Debug>:DEBUG>
)

# STM32CubeMX generated include paths
set(MX_Include_Dirs
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/portable/GCC/ARM_CM3
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Drivers/CMSIS
	${CMAKE_CURRENT_SOURCE_DIR}/../../Config
	${CMAKE_CURRENT_SOURCE_DIR}/../../Peripherals/Inc
)

# STM32CubeMX generated application sources
set(MX_Application_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/main.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/sysmem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/syscalls.c
	${CMAKE_CURRENT_SOURCE_DIR}/../../Peripherals/Src/flash.c
	${CMAKE_CURRENT_SOURCE_DIR}/../../Peripherals/Src/rcc.c
	${CMAKE_CURRENT_SOURCE_DIR}/../../Peripherals/Src/gpio.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Startup/startup_stm32f103xb.s
)

# STM32 HAL/LL Drivers
set(STM32_Drivers_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/system_stm32f1xx.c
)

# Drivers Midllewares

set(FreeRTOS_Src
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/croutine.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/event_groups.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/list.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/queue.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/stream_buffer.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/tasks.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/timers.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/portable/MemMang/heap_4.c
    ${CMAKE_CURRENT_SOURCE_DIR}/../../Middlewares/ThirdParty/FreeRTOS/portable/GCC/ARM_CM3/port.c
)

# Link directories setup
set(MX_LINK_DIRS

)
# Project static libraries
set(MX_LINK_LIBS 
    STM32_Drivers
    ${TOOLCHAIN_LINK_LIBRARIES}
    FreeRTOS
	
)
# Interface library for includes and symbols
add_library(stm32cubemx INTERFACE)
target_include_directories(stm32cubemx INTERFACE ${MX_Include_Dirs})
target_compile_definitions(stm32cubemx INTERFACE ${MX_Defines_Syms})

# Create STM32_Drivers static library
add_library(STM32_Drivers OBJECT)
target_sources(STM32_Drivers PRIVATE ${STM32_Drivers_Src})
target_link_libraries(STM32_Drivers PUBLIC stm32cubemx)


# Create FreeRTOS static library
add_library(FreeRTOS OBJECT)
target_sources(FreeRTOS PRIVATE ${FreeRTOS_Src})
target_link_libraries(FreeRTOS PUBLIC stm32cubemx)

# Add STM32CubeMX generated application sources to the project
target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${MX_Application_Src})

# Link directories setup
target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE ${MX_LINK_DIRS})

# Add libraries to the project
target_link_libraries(${CMAKE_PROJECT_NAME} ${MX_LINK_LIBS})

# Add the map file to the list of files to be removed with 'clean' target
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES ADDITIONAL_CLEAN_FILES ${CMAKE_PROJECT_NAME}.map)

# Validate that STM32CubeMX code is compatible with C standard
if((CMAKE_C_STANDARD EQUAL 90) OR (CMAKE_C_STANDARD EQUAL 99))
    message(ERROR "Generated code requires C11 or higher")
endif()
